[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/explo.gd" type="Script" id=1]
[ext_resource path="res://vox/exp.vox" type="ArrayMesh" id=3]
[ext_resource path="res://materials/white.material" type="Material" id=4]
[ext_resource path="res://materials/explode.shader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/activ = false
shader_param/color1 = Color( 1, 1, 0, 1 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 5 )
shader_param/activ = false
shader_param/color1 = Color( 1, 1, 0, 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 5 )
shader_param/activ = false
shader_param/color1 = Color( 1, 1, 0, 1 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 5 )
shader_param/activ = false
shader_param/color1 = Color( 1, 1, 0, 1 )

[sub_resource type="CubeMesh" id=5]
material = ExtResource( 4 )
size = Vector3( 0.4, 0.4, 0.4 )

[node name="explo" type="Spatial"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="r_right" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 2, 0, 0 )

[node name="r_top" type="RayCast" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1, 0 )
enabled = true
cast_to = Vector3( 2, 0, 0 )

[node name="r_left" type="RayCast" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 2, 0, 0 )

[node name="r_down" type="RayCast" parent="."]
transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 0, 1, 0 )
enabled = true
cast_to = Vector3( 2, 0, 0 )

[node name="tw" type="Tween" parent="."]

[node name="m_top" type="MeshInstance" parent="."]
mesh = ExtResource( 3 )
material/0 = SubResource( 1 )

[node name="m_left" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
mesh = ExtResource( 3 )
material/0 = SubResource( 2 )

[node name="m_down" type="MeshInstance" parent="."]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, 0 )
mesh = ExtResource( 3 )
material/0 = SubResource( 3 )

[node name="m_right" type="MeshInstance" parent="."]
transform = Transform( 7.54979e-08, 0, -1, 0, 1, 0, 1, 0, 7.54979e-08, 0, 0, 0 )
mesh = ExtResource( 3 )
material/0 = SubResource( 4 )

[node name="base" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
mesh = SubResource( 5 )
material/0 = null
